// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Corner
        <span
          class="value"
        >
          Sharp
        </span>
      </p>
      <div
        class="tool-panel-body"
      >
        <div
          class="control offset-corner"
        >
          <select
            id="select-offset-corner"
          >
            <option
              label="Sharp"
              value="sharp"
            >
              Sharp
            </option>
            <option
              label="Round"
              value="round"
            >
              Round
            </option>
          </select>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Corner
        <span
          class="value"
        >
          Sharp
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control offset-corner"
        >
          <select
            id="select-offset-corner"
          >
            <option
              label="Sharp"
              value="sharp"
            >
              Sharp
            </option>
            <option
              label="Round"
              value="round"
            >
              Round
            </option>
          </select>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`should render correctly 3`] = `
<div>
  <div
    class="tool-panel"
  >
    <label
      class="controls accordion"
    >
      <input
        checked=""
        class="accordion-switcher"
        type="checkbox"
      />
      <p
        class="caption"
      >
        Corner
        <span
          class="value"
        >
          Round
        </span>
      </p>
      <div
        class="tool-panel-body collapsed"
      >
        <div
          class="control offset-corner"
        >
          <select
            id="select-offset-corner"
          >
            <option
              label="Sharp"
              value="sharp"
            >
              Sharp
            </option>
            <option
              label="Round"
              value="round"
            >
              Round
            </option>
          </select>
        </div>
      </div>
    </label>
  </div>
</div>
`;
